Display button instead of directly opening email to ease UX

--- a/src/translations/en/contribute/service.json
+++ b/src/translations/en/contribute/service.json
@@ -11,6 +11,7 @@
   "help": "Need help?",
   "loading.subtitle": "It usually takes between 5s and 30s",
   "loading.title": "We're preparing the website",
+  "send_email": "Send us an email",
   "step2.form.documentType": "Type of document",
   "step2.form.select": "Select...",
   "step2.form.serviceName": "Name of the service",
