--- a/src/translations/fr/contribute/service.json
+++ b/src/translations/fr/contribute/service.json
@@ -11,6 +11,7 @@
   "help": "Besoin d'aide ?",
   "loading.subtitle": "Cela prend généralement entre 5s et 30s",
   "loading.title": "Nous préparons le site Web",
+  "send_email": "Envoyez-nous un email",
   "step2.form.documentType": "Type de document",
   "step2.form.select": "Selectionner...",
   "step2.form.serviceName": "Nom du service",
