--- a/src/translations/fr/contribute/service.json
+++ b/src/translations/fr/contribute/service.json
@@ -2,8 +2,8 @@
   "back": "Retour",
   "could_not_create_issue": "Nous sommes vraiment désolés mais la création automatique de ce nouveau service a échoué, nous aurions besoin que vous nous envoyiez un email.",
   "cta": "OK",
-  "description1": "La plupart du temps, les documents contractuels contiennent un en-tête, un pied de page, des menus de navigation, éventuellement des publicités... Nous visons à suivre uniquement <strong>les parties significatives du document</strong>. Pour y parvenir, vous devrez sélectionner la partie des documents qui contient la partie pertinente et supprimer les parties insignifiantes.",
-  "description2": "Pour conserver un haut niveau de qualité de données, nous validons en priorité <strong>les documents en langue anglaise et concernant la juridiction européenne.</strong>",
+  "description1": "La plupart du temps, les documents contractuels contiennent un en-tête, un pied de page, des menus de navigation, éventuellement des publicités... Nous visons à suivre uniquement <strong>les parties significatives du document</strong>.",
+  "description2": "Pour y parvenir, vous devrez sélectionner la partie des documents qui contient la partie pertinente et supprimer les parties insignifiantes.",
   "error.cta": "Faites-nous savoir !",
   "error.title": "Nous sommes désolés, une erreur est survenue",
   "expertMode": "Expert Mode",
