--- a/src/modules/I18n/namespaces.json
+++ b/src/modules/I18n/namespaces.json
@@ -1,26 +1,16 @@
 [
-  "about",
   "analytics",
-  "case-studies",
   "common",
   "contribute",
-  "contribute/home",
-  "contribute/service",
-  "contribute/sorry",
-  "contribute/thanks",
-  "dashboard",
-  "design",
   "footer",
   "github",
   "header",
   "homepage",
   "i18n",
-  "legal-notice",
-  "media",
   "nprogress",
   "ota-api",
-  "privacy-policy",
   "scraper",
-  "subscribe",
-  "wdyr"
+  "service",
+  "sorry",
+  "thanks"
 ]
