--- a/src/translations/fr/homepage.json
+++ b/src/translations/fr/homepage.json
@@ -5,6 +5,6 @@
   "search.label": "Première étape, veuillez saisir l'URL à suivre",
   "seo.desc": "Merci pour votre aide",
   "seo.title": "Contribuez à Open Terms Archive",
-  "subtitle": "Nous avons besoin de vous !",
+  "subtitle": "au dépôt {{versionsRepo}}",
   "title": "Contribuez"
 }
