Remove homepage subtitle

--- a/src/translations/en/homepage.json
+++ b/src/translations/en/homepage.json
@@ -5,6 +5,5 @@
   "search.label": "First step, please fill the URL to track",
   "seo.desc": "Thanks for helping",
   "seo.title": "Contributing to Open Terms Archive",
-  "subtitle": "to the repo {{versionsRepo}}",
-  "title": "Contributing"
+  "title": "Add a document"
 }
