--- a/src/translations/fr/homepage.json
+++ b/src/translations/fr/homepage.json
@@ -4,7 +4,6 @@
   "search.button": "Suivant",
   "search.label": "Première étape, veuillez saisir l'URL à suivre",
   "seo.desc": "Merci pour votre aide",
-  "seo.title": "Contribuez à Open Terms Archive",
-  "subtitle": "au dépôt {{versionsRepo}}",
-  "title": "Contribuez"
+  "seo.title": "Ajouter un document sur Open Terms Archive",
+  "title": "Ajouter un document"
 }
