--- a/src/translations/fr/homepage.json
+++ b/src/translations/fr/homepage.json
@@ -1,8 +1,7 @@
 {
-  "content.p1": "Grâce à un processus en trois étapes, vous pouvez ajouter un document rapidement (cela ne devrait vous prendre que quelques minutes).",
   "no-destination": "Aucune destination n'est présente dans l'url et vous ne devriez jamais aboutir sur cette page, veuillez nous contacter via le lien en bas de page pour plus d'informations.",
-  "search.button": "Suivant",
-  "search.label": "Première étape, veuillez saisir l'URL à suivre",
+  "search.button": "Ajouter",
+  "search.label": "Pour commencer, veuillez saisir l'URL du document",
   "seo.desc": "Merci pour votre aide",
   "seo.title": "Ajouter un document sur Open Terms Archive",
   "title": "Ajouter un document"
