Remove header unecessary wording

--- a/src/translations/en/header.json
+++ b/src/translations/en/header.json
@@ -2,6 +2,5 @@
   "close": "Close",
   "link.github.title": "See the source code",
   "link.twitter.title": "Follow us",
-  "open": "Menu",
-  "title": "Contribution Tool"
+  "open": "Menu"
 }
