--- a/src/translations/fr/header.json
+++ b/src/translations/fr/header.json
@@ -2,6 +2,5 @@
   "close": "Fermer",
   "link.github.title": "Voir le code source",
   "link.twitter.title": "Suivez-nous sur Twitter",
-  "open": "Menu",
-  "title": "Outil de contribution"
+  "open": "Menu"
 }
