--- a/src/translations/fr/homepage.json
+++ b/src/translations/fr/homepage.json
@@ -1,7 +1,7 @@
 {
   "no-destination": "Aucune destination n'est présente dans l'url et vous ne devriez jamais aboutir sur cette page, veuillez nous contacter via le lien en bas de page pour plus d'informations.",
   "search.button": "Ajouter",
-  "search.label": "Pour commencer, veuillez saisir l'URL du document",
+  "search.label": "To begin, please enter the URL of the document",
   "seo.desc": "Merci pour votre aide",
   "seo.title": "Ajouter un document sur Open Terms Archive",
   "title": "Ajouter un document"
