--- a/src/translations/en/service.json
+++ b/src/translations/en/service.json
@@ -1,9 +1,10 @@
 {
   "back": "Go back",
   "could_not_create_issue": "We're truly sorry but the automatic creation of this new service failed, we will need you to send us an email",
-  "cta": "OK",
-  "description1": "Most of the time, contractual documents contains a header, a footer, navigation menus, possibly ads… We aim at tracking only <2>the significant parts of the document</2>",
-  "description2": "In order to achieve that, you will have to select the part of the documents that contains the relevant part and remove the insignificant parts.",
+  "dialog.start.cta": "A",
+  "dialog.start.p1": "Most of the time, contractual documents contains a header, a footer, navigation menus, possibly ads… We aim at tracking only <2>the significant parts of the document</2>",
+  "dialog.start.p2": "In order to achieve that, you will have to select the part of the documents that contains the relevant part and remove the insignificant parts.",
+  "dialog.start.title": "__STRING_NOT_TRANSLATED__",
   "error.cta": "Let us know!",
   "error.title": "We're sorry, an error occured",
   "expertMode": "Expert Mode",
@@ -22,6 +23,5 @@
   "step3.form.significantPart": "Significant part(s)",
   "step3.form.significantPart.cta": "Add part",
   "step3.title": "Step 3: selecting significant part of the document",
-  "submit": "Submit",
-  "title": "What is expected from you"
+  "submit": "Submit"
 }
