--- a/src/translations/fr/service.json
+++ b/src/translations/fr/service.json
@@ -9,19 +9,16 @@
   "error.title": "Nous sommes désolés, une erreur est survenue",
   "expertMode": "Expert Mode",
   "expertMode.button.label": "Sauver en local",
-  "help": "Besoin d'aide ?",
+  "form.documentType": "Type",
+  "form.insignificantPart": "Partie(s) insignifiante(s)",
+  "form.insignificantPart.cta": "Supprimer une partie",
+  "form.select": "Sélectionner...",
+  "form.serviceName": "Nom",
+  "form.significantPart": "Partie(s) significative(s)",
+  "form.significantPart.cta": "Ajouter une partie",
+  "form.url": "URL",
   "loading.subtitle": "Cela prend généralement entre 5s et 30s",
   "loading.title": "Nous préparons le site Web",
   "send_email": "Envoyez-nous un email",
-  "step2.form.documentType": "Type de document",
-  "step2.form.select": "Selectionner...",
-  "step2.form.serviceName": "Nom du service",
-  "step2.form.url": "Url",
-  "step2.title": "Étape 2 : définir ce document",
-  "step3.form.insignificantPart": "Partie(s) insignifiante(s)",
-  "step3.form.insignificantPart.cta": "Supprimer la partie",
-  "step3.form.significantPart": "Partie(s) significative(s)",
-  "step3.form.significantPart.cta": "Ajouter une partie",
-  "step3.title": "Étape 3 : sélection d'une partie significative du document",
   "submit": "Envoyer"
 }
