--- a/src/translations/en/service.json
+++ b/src/translations/en/service.json
@@ -4,24 +4,21 @@
   "dialog.start.cta": "A",
   "dialog.start.p1": "Most of the time, contractual documents contains a header, a footer, navigation menus, possibly ads… We aim at tracking only <2>the significant parts of the document</2>",
   "dialog.start.p2": "In order to achieve that, you will have to select the part of the documents that contains the relevant part and remove the insignificant parts.",
-  "dialog.start.title": "__STRING_NOT_TRANSLATED__",
+  "dialog.start.title": "Some points of attention",
   "error.cta": "Let us know!",
   "error.title": "We're sorry, an error occured",
   "expertMode": "Expert Mode",
   "expertMode.button.label": "Save on local",
-  "help": "Need help?",
+  "form.documentType": "Type",
+  "form.insignificantPart": "Insignificant part(s)",
+  "form.insignificantPart.cta": "Remove part",
+  "form.select": "Select...",
+  "form.serviceName": "Name",
+  "form.significantPart": "Significant part(s)",
+  "form.significantPart.cta": "Add part",
+  "form.url": "URL",
   "loading.subtitle": "It usually takes between 5s and 30s",
   "loading.title": "We're preparing the website",
   "send_email": "Send us an email",
-  "step2.form.documentType": "Type of document",
-  "step2.form.select": "Select...",
-  "step2.form.serviceName": "Name of the service",
-  "step2.form.url": "Url",
-  "step2.title": "Step 2: defining this document",
-  "step3.form.insignificantPart": "Insignificant part(s)",
-  "step3.form.insignificantPart.cta": "Remove part",
-  "step3.form.significantPart": "Significant part(s)",
-  "step3.form.significantPart.cta": "Add part",
-  "step3.title": "Step 3: selecting significant part of the document",
   "submit": "Submit"
 }
