--- a/src/translations/en/service.json
+++ b/src/translations/en/service.json
@@ -11,14 +11,14 @@
   "expertMode.button.label": "Save on local",
   "form.documentType": "Type",
   "form.insignificantPart": "Insignificant part(s)",
-  "form.insignificantPart.cta": "Remove part",
+  "form.insignificantPart.cta": "Select",
   "form.select": "Select...",
   "form.serviceName": "Name",
   "form.significantPart": "Significant part(s)",
-  "form.significantPart.cta": "Add part",
+  "form.significantPart.cta": "Select",
   "form.url": "URL",
   "loading.subtitle": "It usually takes between 5s and 30s",
   "loading.title": "We're preparing the website",
   "send_email": "Send us an email",
-  "submit": "Submit"
+  "submit": "Add document"
 }
