--- a/src/translations/fr/common.json
+++ b/src/translations/fr/common.json
@@ -1,9 +1,3 @@
 {
-  "breadcrumb.thanks.name": "Merci",
-  "subscribe_form.fields.document.default": "__STRING_NOT_TRANSLATED__",
-  "subscribe_form.fields.document.label": "__STRING_NOT_TRANSLATED__",
-  "subscribe_form.fields.service.default": "__STRING_NOT_TRANSLATED__",
-  "subscribe_form.fields.service.label": "__STRING_NOT_TRANSLATED__",
-  "subscribe_form.fields.service.optgroup.gatekeepers": "__STRING_NOT_TRANSLATED__",
-  "subscribe_form.fields.service.optgroup.otherservices": "__STRING_NOT_TRANSLATED__"
+  "breadcrumb.thanks.name": "Merci"
 }
