Add way to remove parts of the document
This is especially useful to hide newsletter popups
Closes #27 Closes #22

--- a/src/translations/fr/service.json
+++ b/src/translations/fr/service.json
@@ -16,6 +16,9 @@
   "form.serviceName": "Nom",
   "form.significantPart": "Partie(s) significative(s)",
   "form.significantPart.cta": "Sélectionner",
+  "form.hiddenPart": "Partie(s) cachée(s)",
+  "form.hiddenPart.cta": "Cacher",
+  "form.hiddenPart.more": "Des popups vous dérangent ? Cachez-les avec cet outil.",
   "form.url": "URL",
   "loading.subtitle": "Cela prend généralement entre 5s et 30s",
   "loading.title": "Nous préparons le site Web",
