--- a/src/translations/en/service.json
+++ b/src/translations/en/service.json
@@ -16,6 +16,9 @@
   "form.serviceName": "Name",
   "form.significantPart": "Significant part(s)",
   "form.significantPart.cta": "Select",
+  "form.hiddenPart": "Hidden part(s)",
+  "form.hiddenPart.more": "Newsletter or popups are bothering you? Hide them with this tool.",
+  "form.hiddenPart.cta": "Hide",
   "form.url": "URL",
   "loading.subtitle": "It usually takes between 5s and 30s",
   "loading.title": "We're preparing the website",
