Improve Drawer UIX

--- a/src/translations/en/service.json
+++ b/src/translations/en/service.json
@@ -10,15 +10,16 @@
   "expertMode": "Expert Mode",
   "expertMode.button.label": "Save on local",
   "form.documentType": "Type",
+  "form.hiddenPart": "Hidden element(s)",
+  "form.hiddenPart.cta": "Select",
+  "form.hiddenPart.more": "To hide elements that bother you.",
   "form.insignificantPart": "Insignificant part(s)",
   "form.insignificantPart.cta": "Select",
+  "form.label.json": "JSON",
   "form.select": "Select...",
   "form.serviceName": "Name",
   "form.significantPart": "Significant part(s)",
   "form.significantPart.cta": "Select",
-  "form.hiddenPart": "Hidden part(s)",
-  "form.hiddenPart.more": "Newsletter or popups are bothering you? Hide them with this tool.",
-  "form.hiddenPart.cta": "Hide",
   "form.url": "URL",
   "loading.subtitle": "It usually takes between 5s and 30s",
   "loading.title": "We're preparing the website",
