--- a/src/translations/default/service.json
+++ b/src/translations/default/service.json
@@ -6,7 +6,7 @@
   "description2": "In order to achieve that, you will have to select those specific parts and remove the insignificant ones.",
   "error.cta": "Let us know!",
   "error.title": "We're sorry, an error occured",
-  "expertMode": "Expert Mode",
+  "expertMode": "Advanced Options",
   "expertMode.button.label": "Save on local",
   "help": "Need help?",
   "loading.subtitle": "It usually takes between 5s and 30s",
@@ -23,5 +23,6 @@
   "step3.form.significantPart.cta": "Add part",
   "step3.title": "Step 3: selecting significant part of the document",
   "submit": "Submit",
-  "title": "What is expected from you"
+  "title": "What is expected from you",
+  "form.label.json": "JSON"
 }
