--- a/src/translations/fr/service.json
+++ b/src/translations/fr/service.json
@@ -7,18 +7,19 @@
   "dialog.start.title": "Quelques points d'attention",
   "error.cta": "Faites-nous savoir !",
   "error.title": "Nous sommes désolés, une erreur est survenue",
-  "expertMode": "Expert Mode",
+  "expertMode": "Options avancées",
   "expertMode.button.label": "Sauver en local",
   "form.documentType": "Type",
+  "form.hiddenPart": "Élement(s) masqué(s)",
+  "form.hiddenPart.cta": "Sélectionner",
+  "form.hiddenPart.more": "Pour cacher les éléments qui vous gênent.",
   "form.insignificantPart": "Partie(s) insignifiante(s)",
   "form.insignificantPart.cta": "Sélectionner",
+  "form.label.json": "JSON",
   "form.select": "Sélectionner...",
   "form.serviceName": "Nom",
   "form.significantPart": "Partie(s) significative(s)",
   "form.significantPart.cta": "Sélectionner",
-  "form.hiddenPart": "Partie(s) cachée(s)",
-  "form.hiddenPart.cta": "Cacher",
-  "form.hiddenPart.more": "Des popups vous dérangent ? Cachez-les avec cet outil.",
   "form.url": "URL",
   "loading.subtitle": "Cela prend généralement entre 5s et 30s",
   "loading.title": "Nous préparons le site Web",
