--- a/src/translations/fr/service.json
+++ b/src/translations/fr/service.json
@@ -26,5 +26,6 @@
   "loading.subtitle": "Cela prend généralement entre 5s et 30s",
   "loading.title": "Nous préparons le site Web",
   "send_email": "Envoyez-nous un email",
+  "verify": "Vérifier",
   "submit": "Ajouter le document"
 }
