Guide user into trying executeClientScripts

--- a/src/translations/en/service.json
+++ b/src/translations/en/service.json
@@ -7,6 +7,7 @@
   "dialog.start.title": "Some points of attention",
   "error.cta": "Let us know!",
   "error.title": "We're sorry, an error occured",
+  "pageNotAccurate.cta": "Page does not seem accurate? Try differently.",
   "expertMode": "Expert Mode",
   "expertMode.button.label": "Save on local",
   "form.documentType": "Type",
@@ -18,8 +19,8 @@
   "form.label.json": "JSON",
   "form.select": "Select...",
   "form.serviceName": "Name",
-  "form.executeClientScripts": "Headless browser",
-  "form.executeClientScripts.more": "Use headless browser for fetching document",
+  "form.executeClientScripts": "Switch JavaScript on",
+  "form.executeClientScripts.more": "If the page you try to load is interactive, rendering it with JavaScript enabled might improve rendering.",
   "form.significantPart": "Significant part(s)",
   "form.significantPart.cta": "Select",
   "form.url": "URL",
