--- a/src/translations/fr/service.json
+++ b/src/translations/fr/service.json
@@ -7,6 +7,7 @@
   "dialog.start.title": "Quelques points d'attention",
   "error.cta": "Faites-nous savoir !",
   "error.title": "Nous sommes désolés, une erreur est survenue",
+  "pageNotAccurate.cta": "La page ne correspond pas ? Essayez autrement.",
   "expertMode": "Options avancées",
   "expertMode.button.label": "Sauver en local",
   "form.documentType": "Type",
@@ -18,8 +19,8 @@
   "form.label.json": "JSON",
   "form.select": "Sélectionner...",
   "form.serviceName": "Nom",
-  "form.executeClientScripts": "Navigateur headless",
-  "form.executeClientScripts.more": "Utiliser un navigateur headless pour récupérer le document",
+  "form.executeClientScripts": "Activer le JavaScript",
+  "form.executeClientScripts.more": "Si la page que vous essayez de charger est interactive, le rendre avec JavaScript activé peut améliorer le rendu.",
   "form.significantPart": "Partie(s) significative(s)",
   "form.significantPart.cta": "Sélectionner",
   "form.url": "URL",
