Improve UI and wording

--- a/src/translations/en/service.json
+++ b/src/translations/en/service.json
@@ -7,7 +7,8 @@
   "dialog.start.title": "Some points of attention",
   "error.cta": "Let us know!",
   "error.title": "We're sorry, an error occured",
-  "pageNotAccurate.cta": "Page does not seem accurate? Try differently.",
+  "pageNotAccurate.desc": "A problem with the loading of the page?",
+  "pageNotAccurate.cta": "Click here, we will try another way.",
   "expertMode": "Expert Mode",
   "expertMode.button.label": "Save on local",
   "form.documentType": "Type",
