--- a/src/translations/fr/service.json
+++ b/src/translations/fr/service.json
@@ -7,7 +7,8 @@
   "dialog.start.title": "Quelques points d'attention",
   "error.cta": "Faites-nous savoir !",
   "error.title": "Nous sommes désolés, une erreur est survenue",
-  "pageNotAccurate.cta": "La page ne correspond pas ? Essayez autrement.",
+  "pageNotAccurate.desc": "Un problème avec le chargement de la page ?",
+  "pageNotAccurate.cta": "Cliquez ici, nous allons essayer autrement.",
   "expertMode": "Options avancées",
   "expertMode.button.label": "Sauver en local",
   "form.documentType": "Type",
