Change translations based on Nico's review

--- a/src/translations/en/service.json
+++ b/src/translations/en/service.json
@@ -7,8 +7,8 @@
   "dialog.start.title": "Some points of attention",
   "error.cta": "Let us know!",
   "error.title": "We're sorry, an error occured",
-  "pageNotAccurate.desc": "A problem with the loading of the page?",
-  "pageNotAccurate.cta": "Click here, we will try another way.",
+  "pageNotAccurate.desc": "A problem with page loading?",
+  "pageNotAccurate.cta": "Try another method",
   "expertMode": "Expert Mode",
   "expertMode.button.label": "Save on local",
   "form.documentType": "Type",
@@ -20,8 +20,8 @@
   "form.label.json": "JSON",
   "form.select": "Select...",
   "form.serviceName": "Name",
-  "form.executeClientScripts": "Switch JavaScript on",
-  "form.executeClientScripts.more": "If the page you try to load is interactive, rendering it with JavaScript enabled might improve rendering.",
+  "form.executeClientScripts": "Execute page scripts",
+  "form.executeClientScripts.more": "If the page you want to display loads its content dynamically, running the scripts can improve the rendering.",
   "form.significantPart": "Significant part(s)",
   "form.significantPart.cta": "Select",
   "form.url": "URL",
