--- a/src/translations/fr/service.json
+++ b/src/translations/fr/service.json
@@ -8,7 +8,7 @@
   "error.cta": "Faites-nous savoir !",
   "error.title": "Nous sommes désolés, une erreur est survenue",
   "pageNotAccurate.desc": "Un problème avec le chargement de la page ?",
-  "pageNotAccurate.cta": "Cliquez ici, nous allons essayer autrement.",
+  "pageNotAccurate.cta": "Essayer une autre méthode",
   "expertMode": "Options avancées",
   "expertMode.button.label": "Sauver en local",
   "form.documentType": "Type",
@@ -20,8 +20,8 @@
   "form.label.json": "JSON",
   "form.select": "Sélectionner...",
   "form.serviceName": "Nom",
-  "form.executeClientScripts": "Activer le JavaScript",
-  "form.executeClientScripts.more": "Si la page que vous essayez de charger est interactive, le rendre avec JavaScript activé peut améliorer le rendu.",
+  "form.executeClientScripts": "Exécuter les scripts de la page",
+  "form.executeClientScripts.more": "Si la page que vous souhaiter afficher charge son contenu de manière dynamique, executer les scripts peut améliorer le rendu.",
   "form.significantPart": "Partie(s) significative(s)",
   "form.significantPart.cta": "Sélectionner",
   "form.url": "URL",
