Modify text as it is now a PR created and not an issue

--- a/src/translations/default/thanks.mdx
+++ b/src/translations/default/thanks.mdx
@@ -1,6 +1,6 @@
 ## You are now a contributor to the Open Terms Archive project
 
-To manage the contributions easily, we use GitHub issues. So we created one that <a href={url} target="_blank" rel="noopener">you can see here</a>. This allows you to know the status of your contribution and to communicate with us about it.
+To manage the contributions easily, we use GitHub pull requests. So we created one that <a href={url} target="_blank" rel="noopener">you can see here</a>. This allows you to know the status of your contribution and to communicate with us about it.
 
 We do our best to add your request as fast possible as possible but it may take several days. Indeed, to guarantee a high quality of data we test each contribution to make sure that everything works perfectly.
 
