Add button to generate version
Add Version component to service declaration form

--- a/src/translations/fr/service.json
+++ b/src/translations/fr/service.json
@@ -30,5 +30,6 @@
   "loading.subtitle": "Cela prend généralement entre 5s et 30s",
   "loading.title": "Nous préparons le site Web",
   "send_email": "Envoyez-nous un email",
+  "verify": "Vérifier la version",
   "submit": "Ajouter le document"
 }
