--- a/src/translations/en/service.json
+++ b/src/translations/en/service.json
@@ -30,5 +30,6 @@
   "loading.subtitle": "It usually takes between 5s and 30s",
   "loading.title": "We're preparing the website",
   "send_email": "Send us an email",
+  "verify": "Verify version",
   "submit": "Add document"
 }
