--- a/locales/en/service.json
+++ b/locales/en/service.json
@@ -2,7 +2,7 @@
   "back": "Go back",
   "could_not_create_issue": "We're truly sorry but the automatic creation of this new service failed, we will need you to send us an email",
   "dialog.help.cta": "Let's begin!",
-  "dialog.help.p1": "Most of the time, contractual documents contains a header, a footer, navigation menus, possibly ads… We aim at tracking only <2>the significant parts of the document</2>",
+  "dialog.help.p1": "Most of the time, contractual documents contains a header, a footer, navigation menus, possibly ads… We aim at tracking only <strong>the significant parts of the document</strong>",
   "dialog.help.p2": "In order to achieve that, you will have to select those specific parts and remove the insignificant ones.",
   "dialog.help.title": "Some points of attention",
   "error.cta": "Let us know!",
