--- a/locales/en/service.json
+++ b/locales/en/service.json
@@ -13,6 +13,7 @@
   "expertMode": "Expert Mode",
   "expertMode.button.label": "Save on local",
   "form.documentType": "Type",
+  "form.links-snapshots-versions": "Existing versions and snapshots",
   "form.hiddenPart": "Hidden element(s)",
   "form.hiddenPart.cta": "Select",
   "form.hiddenPart.more": "To hide elements that bother you.",
