--- a/locales/fr/homepage.json
+++ b/locales/fr/homepage.json
@@ -4,5 +4,8 @@
   "search.label": "Saissisez l'URL d'un document",
   "seo.desc": "Merci pour votre aide",
   "seo.title": "Ajouter un document sur Open Terms Archive",
-  "title": "Ajouter un document"
+  "title": "Outil de contribution",
+  "add.title": "Ajouter un document",
+  "edit.title": "Éditer un document",
+  "edit.subtitle": "En copiant le lien vers un commit GitHub"
 }
