--- a/locales/en/homepage.json
+++ b/locales/en/homepage.json
@@ -1,5 +1,5 @@
 {
-  "no-destination": "No destination is present in the url, please contact us through the footer link for more information.",
+  "no-destination": "No destination is present in the url, please select one.",
   "search.button": "Add",
   "search.label": "Fill the document URL to track",
   "seo.desc": "Thanks for helping",
