--- a/locales/fr/homepage.json
+++ b/locales/fr/homepage.json
@@ -1,5 +1,5 @@
 {
-  "no-destination": "Aucune destination n'est présente dans l'url, veuillez nous contacter via le lien en bas de page pour plus d'informations.",
+  "no-destination": "Aucune destination n'est présente dans l'url, veuillez en sélectionner une.",
   "search.button": "Ajouter",
   "search.label": "Saissisez l'URL d'un document",
   "seo.desc": "Merci pour votre aide",
