Change button action translation

--- a/locales/en/service.json
+++ b/locales/en/service.json
@@ -33,5 +33,5 @@
   "loading.title": "We're preparing the website",
   "send_email": "Send us an email",
   "verify": "Verify version",
-  "submit": "Add document"
+  "submit": "Send document"
 }
