--- a/locales/fr/service.json
+++ b/locales/fr/service.json
@@ -33,5 +33,5 @@
   "loading.title": "Nous préparons le site Web",
   "send_email": "Envoyez-nous un email",
   "verify": "Vérifier la version",
-  "submit": "Ajouter le document"
+  "submit": "Envoyer le document"
 }
