--- a/locales/en/service.json
+++ b/locales/en/service.json
@@ -34,6 +34,6 @@
   "loading.subtitle": "It usually takes between 5s and 30s",
   "loading.title": "We're preparing the website",
   "send_email": "Send us an email",
-  "verify": "Verify version",
+  "verify-version": "Verify version",
   "submit": "Send document"
 }
