--- a/locales/fr/service.json
+++ b/locales/fr/service.json
@@ -34,6 +34,6 @@
   "loading.subtitle": "Cela prend généralement entre 5s et 30s",
   "loading.title": "Nous préparons le site Web",
   "send_email": "Envoyez-nous un email",
-  "verify": "Vérifier la version",
+  "verify-version": "Vérifier la version",
   "submit": "Envoyer le document"
 }
