--- a/locales/en/service.json
+++ b/locales/en/service.json
@@ -29,6 +29,8 @@
   "form.url": "URL",
   "form.acceptLanguage": "Force language (fr, es, ...)",
   "form.acceptLanguage.more": "If the language of the document is not the one you were expecting.",
+  "form.bypassCookies": "Bypass cookies",
+  "form.bypassCookies.more": "Often, cookie banners or modals gets in the way. Check this to try to bypass them.",
   "loading.subtitle": "It usually takes between 5s and 30s",
   "loading.title": "We're preparing the website",
   "send_email": "Send us an email",
