--- a/locales/fr/service.json
+++ b/locales/fr/service.json
@@ -35,5 +35,6 @@
   "loading.title": "Nous préparons le site Web",
   "send_email": "Envoyez-nous un email",
   "verify-version": "Vérifier la version",
+  "show-snapshot": "Voir le snapshot original",
   "submit": "Envoyer le document"
 }
