Set default for email signature

--- a/content/parts/en/contributor-form.mdx
+++ b/content/parts/en/contributor-form.mdx
@@ -4,7 +4,7 @@ Open Terms Archive is an open source initiative that relies on contributors just
 
 By default, your contributions will be anonymous. Signing your contributions with your email address will enable you to be notified when they are integrated or discussed and to be credited publicly for them.
 
-<SignatureInput />
+<SignatureEmailInput />
 
 <UpdateButton>Sign your contribution with your email address</UpdateButton>
 
