Remove Opt Out process

--- a/content/parts/en/contributor-form.mdx
+++ b/content/parts/en/contributor-form.mdx
@@ -13,7 +13,6 @@ By default, your contributions will be anonymous. Signing your contributions wit
 - If you have an account on [GitHub](https://github.com), we recommend using an address linked to it so your account is mentioned.
 
 <small>
-  If you only want to contribute anonymously, you can <OptOutButton>opt-out now</OptOutButton>. You
-  can always join the discussion later, but we will not be able to proactively contact you if we
-  have questions.
+  If you only want to contribute anonymously, you can leave the default email. You can always join
+  the discussion later, but we will not be able to proactively contact you if we have questions.
 </small>
