--- a/content/parts/fr/contributor-form.mdx
+++ b/content/parts/fr/contributor-form.mdx
@@ -21,4 +21,4 @@ Super ! Veuillez saisir l'une des informations suivantes dans le champ ci-dessou
 
 ### Vous ne voulez pas être cité
 
-Pas de problèmes, il suffit de <OptOutButton>cliquer ici</OptOutButton>.
+Pas de problèmes, vous pouvez laisser l'email par défaut.
