Add contributor name

--- a/content/parts/fr/contributor-form.mdx
+++ b/content/parts/fr/contributor-form.mdx
@@ -13,6 +13,7 @@ Super ! Veuillez saisir l'une des informations suivantes dans le champ ci-dessou
 - votre adresse e-mail GitHub → vous serez <a href="https://docs.github.com/en/pull-requests/committing-changes-to-your-project/creating-and-editing-commits/creating-a-commit-with-multiple-authors" target="_blank">listé comme co-auteur</a>
 - une adresse e-mail → celle-ci apparaîtra sur le changement proposé sur GitHub
 
+<SignatureNameInput />
 <SignatureEmailInput />
 
 <UpdateButton>Enregistrer l'e-mail</UpdateButton>
