--- a/content/parts/en/contributor-form.mdx
+++ b/content/parts/en/contributor-form.mdx
@@ -2,11 +2,12 @@
 
 Open Terms Archive is an open source initiative that relies on contributors just like you 🤗.
 
-By default, your contributions will be anonymous. Signing your contributions with your email address will enable you to be notified when they are integrated or discussed and to be credited publicly for them.
+By default, your contributions will be anonymous. Signing your contributions with your name and/or email address will enable you to be notified when they are integrated or discussed and to be credited publicly for them.
 
+<SignatureNameInput />
 <SignatureEmailInput />
 
-<UpdateButton>Sign your contribution with your email address</UpdateButton>
+<UpdateButton>Save your signature</UpdateButton>
 
 - While not readable anywhere on the web, this email address will be [publicly](https://stackoverflow.com/a/897604/594053) and irreversibly associated with your contribution.
 - We will use this address only if it is necessary to contact you for integrating, crediting or otherwise handling this specific contribution.
