Improve and translate copywriting

--- a/content/parts/fr/contributor-form.mdx
+++ b/content/parts/fr/contributor-form.mdx
@@ -1,22 +1,15 @@
-## Soyez cité dans votre contribution !
+## Signer votre contribution
 
-Open Terms Archive est une initiative Open Source qui s'appuie sur des contributeurs comme vous.
+Open Terms Archive est une initiative open source qui repose sur des contributrices et contributeurs comme vous 🤗
 
-Nous voulons donc vous donner **tout le crédit** pour votre contribution et pour ce faire, nous avons besoin d'une information de votre part.
-
-2 possibilités s'offrent à vous :
-
-### Vous voulez être cité
-
-Super ! Veuillez saisir l'une des informations suivantes dans le champ ci-dessous :
-
-- votre adresse e-mail GitHub → vous serez <a href="https://docs.github.com/en/pull-requests/committing-changes-to-your-project/creating-and-editing-commits/creating-a-commit-with-multiple-authors" target="_blank">listé comme co-auteur</a>
-- une adresse e-mail → celle-ci apparaîtra sur le changement proposé sur GitHub
+Par défaut, vos contributions sont anonymes. Signer vos contributions vous permet d’en avoir publiquement la paternité et de recevoir une notification lorsque celles-ci seront intégrées ou discutées.
 
 <ContributorFormFields />
 
----
+- Bien qu’elle ne soit pas lisible directement sur le web, cette adresse électronique sera associée à votre contribution de manière [publique](https://stackoverflow.com/a/897604/594053) et irréversible.
+- Nous n’utiliserons cette adresse que s’il est nécessaire de vous contacter pour intégrer, créditer ou traiter cette contribution.
+- Si vous avez un compte [GitHub](https://github.com), utiliser une adresse qui y est associée permettra de le mentionner.
 
-### Vous ne voulez pas être cité
-
-Pas de problèmes, vous pouvez laisser l'email par défaut.
+<small>
+  Si vous souhaitez contribuer de manière anonyme, vous pouvez laisser l’adresse électronique par défaut. Vous pourrez toujours rejoindre la discussion plus tard, mais les mainteneurs ne pourront pas vous contacter si cette contribution pose question.
+</small>
