--- a/locales/fr/contributor-form.json
+++ b/locales/fr/contributor-form.json
@@ -1,5 +1,5 @@
 {
   "field.name.label": "Nom",
-  "field.email.label": "Email",
-  "submit": "Enregistrer l'e-mail"
+  "field.email.label": "Courriel",
+  "submit": "Définir votre signature"
 }
