--- a/locales/en/contributor-form.json
+++ b/locales/en/contributor-form.json
@@ -1,5 +1,5 @@
 {
   "field.name.label": "Name",
   "field.email.label": "Email",
-  "submit": "Save your signature"
+  "submit": "Define your signature"
 }
