--- a/content/parts/en/contributor-form.mdx
+++ b/content/parts/en/contributor-form.mdx
@@ -11,5 +11,5 @@ By default, your contributions will be anonymous. Signing your contributions ena
 - If you have an account on [GitHub](https://github.com), using an address linked to it will enable mentioning your account.
 
 <small>
-  If you only want to contribute anonymously, you can leave the default email. You can always join the discussion later, but maintainers will not be able to proactively contact you if they have questions.
+  If you want to contribute anonymously, you can leave the default email. You can always join the discussion later, but maintainers will not be able to proactively contact you if they have questions.
 </small>
